# nfc-laboratory

./: .gitignore  CMakeLists.txt  PROTOBUF.md  README.md
.github/workflows/: cmake-build.yml
dat/flatpak/: io.github.josevcm.nfc-laboratory.metainfo.xml
doc/specs/: 2026-05-01-grpc-remote-control-design.md  2026-05-01-grpc-remote-control-plan.md
src/nfc-app/app-qt/: CMakeLists.txt
src/nfc-app/app-qt/src/main/api/proto/: nfc_control.proto
src/nfc-app/app-qt/src/main/cpp/: QtApplication.cpp  QtControl.cpp  QtControl.h  QtRemote.cpp  QtRemote.h  QtWindow.cpp  QtWindow.h  main.cpp
src/nfc-app/app-qt/src/main/cpp/events/: DecoderControlEvent.cpp  DecoderControlEvent.h
src/nfc-app/app-qt/src/main/cpp/remote/: GrpcControl.cpp  GrpcControl.h
src/nfc-app/app-qt/src/main/cpp/rpc/: GrpcControl.cpp  GrpcControl.h  GrpcServer.cpp  GrpcServer.h
src/nfc-app/app-qt/src/main/proto/: nfc_control.proto
src/nfc-app/app-rx/src/main/cpp/: main.cpp
src/nfc-lib/lib-ext/airspy/: CMakeLists.txt
src/nfc-lib/lib-ext/airspy/src/main/c/: airspy.c
src/nfc-lib/lib-ext/crapto1/: CMakeLists.txt
src/nfc-lib/lib-ext/ed25519/: CMakeLists.txt
src/nfc-lib/lib-ext/hydrasdr/: CMakeLists.txt
src/nfc-lib/lib-ext/mirisdr/: CMakeLists.txt
src/nfc-lib/lib-ext/rtlsdr/: CMakeLists.txt
src/nfc-lib/lib-hw/hw-dev/: CMakeLists.txt
src/nfc-lib/lib-hw/hw-logic/: CMakeLists.txt
src/nfc-lib/lib-rt/: CMakeLists.txt
src/nfc-lib/lib-rt/rt-proto/: CMakeLists.txt
src/nfc-lib/lib-rt/rt-proto/src/main/proto/: ping.proto
src/nfc-lib/lib-rt/rt-proto/src/test/cpp/: verify_proto.cpp
src/nfc-test/: CMakeLists.txt
src/nfc-test/test-dio/src/main/cpp/: main.cpp
src/nfc-test/test-rpc/: CMakeLists.txt
src/nfc-test/test-rpc/src/main/cpp/: client.cpp  main.cpp
src/nfc-test/test-rpc/src/main/proto/: nfc_capture.proto
src/nfc-test/test-sdr/src/main/cpp/: main.cpp
